Add order delete method
