# docs/swagger.yaml
@@ -1321,6 +1321,40 @@ paths:
       summary: Get items with tag
       tags:
       - items-actions
+  /orders/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete order by id
+      parameters:
+      - description: order id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+      security:
+      - UsersAuth: []
+      - AdminAuth: []
+      summary: Delete order
+      tags:
+      - orders-actions
   /orders/create:
     post:
       consumes:
